update kubernetes config

--- a/api/backend.yaml
+++ b/api/backend.yaml
@@ -31,13 +31,11 @@ spec:
     spec:
       containers:
       - name: backend
-        image: continental-backend:0.0.2
+        image: continental-backend:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 3000
         env:
-        - name: FRONT_BASE_URL
-          value: localhost:3000
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
@@ -57,55 +55,3 @@ spec:
           value: "5432"
         - name: POSTGRES_HOST
           value: continental-database-service
-        - name: JWT_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: jwt-secret
-              key: secret
-        - name: JWT_EXPIRATION_TIME
-          value: "28800"
-        - name: PGADMIN_DEFAULT_EMAIL
-          valueFrom:
-            secretKeyRef:
-              name: pgadmin-email
-              key: pgadmin-default-email
-        - name: PGADMIN_DEFAULT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: pgadmin-pwd
-              key: pgadmin-password
-        - name: GMAIL_USER
-          valueFrom:
-            secretKeyRef:
-              name: gmail-user
-              key: gmail-username
-        - name: GMAIL_PASS
-          valueFrom:
-            secretKeyRef:
-              name: gmail-pwd
-              key: gmail-password
-        - name: GMAIL_CLIENT_ID
-          valueFrom:
-            secretKeyRef:
-              name: gmail-client-id
-              key: gmail-id
-        - name: GMAIL_CLIENT_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: gmail-client-secret
-              key: gmail-secret
-        - name: GMAIL_AUTH_CODE
-          valueFrom:
-            secretKeyRef:
-              name: gmail-client-auth-code
-              key: gmail-auth-code
-        - name: GMAIL_REFRESH_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: gmail-client-refresh-token
-              key: gmail-refresh-token
-        - name: GMAIL_ACCESS_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: gmail-client-access-token
-              key: gmail-access-token
