--- a/database.yaml
+++ b/database.yaml
@@ -68,20 +68,11 @@ spec:
         - containerPort: 5432
         env:
         - name: POSTGRES_USER
-          valueFrom:
-            secretKeyRef:
-              name: postgres-user
-              key: postgres-username
+          value: continental
         - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-pwd
-              key: postgres-password
+          value: admin
         - name: POSTGRES_DB
-          valueFrom:
-            secretKeyRef:
-              name: postgres-db
-              key: postgres-database
+          value: continental
         volumeMounts:
           - mountPath: /var/lib/postgresql/data
             name: continentaldb
