--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -17,6 +17,9 @@ WORKDIR /usr/src/app
 COPY --from=base /usr/src/app/dist ./
 COPY --from=base /usr/src/app/node_modules ./node_modules/
 
+RUN mkdir ./src
+COPY ./src/exports/* ./src/exports/
+
 EXPOSE 3000
 
 
